# ssh-key-manager

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md
.dependabot/: config.yml
.github/: dependabot.yml
core/api/: Cargo.toml
core/api/src/: lib.rs
core/app/: Cargo.toml
core/app/src/: groups.rs  lib.rs  public_keys.rs  rstatic.rs
core/app/src/auth/: logout.rs  mod.rs
core/app/src/auth/oauth/: callback.rs  mod.rs
core/common/: Cargo.toml
core/common/src/: lib.rs
core/common/src/database/: create.rs  database.rs  database_error.rs  db_list.rs  delete.rs  delete_obj.rs  fetch_all.rs  fetch_all_for.rs  fetch_by_id.rs  fetch_by_uid.rs  fetch_first.rs  mod.rs  save.rs
core/common/src/database/tests/: mod.rs  public_key.rs
core/common/src/database/tests/auth/: admin.rs  err.rs
core/common/src/objects/: entity.rs  event.rs  group.rs  group_member.rs  mod.rs  public_key.rs  server.rs  user.rs
core/common/src/sec/: auth.rs  csrf.rs  mod.rs  oauth.rs  oauth_async.rs
core/common/src/types/: access_options.rs  authorization_type.rs  entity_types.rs  event_types.rs  fingerprint.rs  id.rs  key_management.rs  mod.rs  sync_status_type.rs  user_types.rs
core/common/src/web/: base.rs  mod.rs  request.rs  response_type.rs  routes.rs  server.rs  template_engine.rs
core/macros/: Cargo.toml
core/macros/src/: enum_from.rs  from_form.rs  lib.rs
core/views/: Cargo.toml
core/views/src/: group.rs  lib.rs  public_key.rs
database/diesel/: Cargo.toml
database/diesel/migrations.mysql/2020-03-22-092409_migration/: down.sql  up.sql
database/diesel/migrations.postgres/2020-03-22-092409_migration/: down.sql  up.sql
database/diesel/src/: binary_wrapper.rs  common_types.rs  database.rs  db_traits.rs  db_wrapper.rs  entity.rs  error.rs  event.rs  group.rs  group_members.rs  lib.rs  macros.rs  migrate.rs  public_key.rs  schema.rs  server.rs  user.rs
database/diesel/tests/: mod.rs
docker/: commands  data-pg.sql  docker-compose.yml  entrypoint.sh  kc-init.sql  mariadb.patch.sql
patches/clap/: ansi_term.patch  strsim.patch  warn.patch
patches/csrf/: RUSTSEC-2016-0005.patch  log.patch  rand.patch  warn.patch
patches/oauth-rs/: default.patch  unicode.patch  warn.patch
patches/openidconnect/: error.patch  oauth.patch  ring.patch  untrusted.patch  warn.patch
sec/token/: Cargo.toml
sec/token/src/: lib.rs  token.rs
src/: args.rs  main.rs
src/routes/: app.rs  auth.rs  mod.rs
static/: extra.js  style.css  swagger.yaml
template/handlebars/: Cargo.toml
template/handlebars/src/: helper.rs  lib.rs
templates/: par_add.hbs  par_base.hbs  par_list.hbs  par_list_view.hbs  par_pageination.hbs  par_pubkey_body.hbs  par_pubkey_header.hbs  site_group.hbs  site_groups.hbs  site_help.hbs  site_home.hbs  site_login.hbs  site_publickey.hbs  site_publickeys.hbs  site_server.hbs  site_servers.hbs  site_user.hbs  site_users.hbs
web/hyper/: Cargo.toml
web/hyper/src/: hyper_request.rs  hyper_server.rs  lib.rs
