[package]
name = "core_common"
version = "0.1.0"
authors = ["Marc Mettke <marc@itmettke.de>"]
edition = "2018"
description = "Core Library providing common data structures"
license-file = "../../LICENSE"
repository = "https://github.com/mettke/ssh-key-manager"
readme = "README.md"
keywords = ["ssh", "key", "management", "data"]
categories = ["data-structures"]

[dependencies]
async-trait = "0.1"
base64 = "0.12"
bishop = "0.3"
core_macros = { path = "../macros" }
chrono = { version = "0.4", features = ["serde"] }
csrf = "0.3"
failure = "0.1"
http = "0.2"
http_01 = { version = "0.1", package = "http" }
jsonwebtoken = "7.1"
log = "0.4"
openidconnect = { git = 'https://github.com/ramosbugs/openidconnect-rs.git', version = "1.0.0-alpha.14" }
openssh-keys = "0.4"
reqwest = { version = "0.10", features = ["rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros", "rt-threaded", "signal", "fs"] }
url = "2.1"
uuid = "0.8"

[package.metadata.patch.openidconnect]
patches = [
    "patches/openidconnect/error.patch",
    "patches/openidconnect/ring.patch",
    "patches/openidconnect/oauth.patch",
    "patches/openidconnect/warn.patch",
]
