[package]
name = "core_macros"
version = "1.0.0"
authors = ["Marc Mettke <marc@itmettke.de>"]
edition = "2018"
description = "Core Library providing macros"
license-file = "../LICENSE"
repository = "https://github.com/mettke/ssh-key-manager"
readme = "../README.md"
keywords = ["ssh", "key", "management", "macros"]
categories = ["development-tools"]

[lib]
proc-macro = true

[dependencies]
heck = "0.3"
proc-macro2 = "1.0"
quote = "1.0"
rustversion = "1.0"
syn = "1.0"
