[package]
name = "database_diesel"
version = "0.1.0"
authors = ["Marc Mettke <marc@itmettke.de>"]
edition = "2018"
description = "Core Library providing database connection via diesel"
license-file = "../../../LICENSE"
repository = "https://github.com/mettke/ssh-key-manager"
readme = "README.md"
keywords = ["ssh", "key", "management", "database", "diesel"]
categories = ["database"]

[dependencies]
core_common = { path = "../../core/common" }
diesel = { version = "1.4", features = ["postgres", "mysql", "r2d2", "chrono"] }
diesel_migrations = "1.4"
serde = { version = "1.0", features = ["derive"] }
r2d2 = "0.8"

[dev-dependencies]
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
