[package]
name = "sec_token"
version = "0.1.0"
authors = ["Marc Mettke <marc@itmettke.de>"]
edition = "2018"
description = "Core Library providing jwt token authentication"
license-file = "../../LICENSE"
repository = "https://github.com/mettke/ssh-key-manager"
readme = "README.md"
keywords = ["ssh", "key", "management", "authentication"]
categories = ["Authentication"]

[dependencies]
aes = "0.3"
block-modes = "0.3"
core_common = { path = "../../core/common" }
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
